colocando link e variavel

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <h2>Por Milton Duarte</h2>
+        <h2><a href=" https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Por Milton Duarte</a></h2>
     </header>
     <main>
         <section>
